force-app/main/default/objects/breg_Stock__c/breg_Stock__c.object-meta.xml
<CustomObject>
    <description>Aalta BREG-64</description>
    <label>Stock</label>
    <nameField>
        <displayFormat>Stock-{000000000}</displayFormat>
        <label>Stock Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stocks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>