force-app/main/default/objects/breg_Stock__c/fields/breg_Account__c.field-meta.xml
<CustomField>
    <fullName>breg_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Aalta BREG-64</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Stocks</relationshipLabel>
    <relationshipName>Stocks</relationshipName>
    <type>Lookup</type>
</CustomField>