force-app/main/default/objects/breg_Stock__c/fields/breg_BRIM_STOCK_ID__c.field-meta.xml
<CustomField>
    <fullName>breg_BRIM_STOCK_ID__c</fullName>
    <description>Aalta BREG-1355</description>
    <externalId>true</externalId>
    <label>BRIM STOCK ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>