force-app/main/default/objects/breg_Stock__c/fields/breg_Case__c.field-meta.xml
<CustomField>
    <fullName>breg_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>breg_Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Stocks</relationshipLabel>
    <relationshipName>Stocks</relationshipName>
    <type>Lookup</type>
</CustomField>