force-app/main/default/objects/breg_Stock__c/fields/breg_Class_Detail__c.field-meta.xml
<CustomField>
    <fullName>breg_Class_Detail__c</fullName>
    <description>Aalta BREG-64</description>
    <label>Class Detail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>