force-app/main/default/objects/breg_Stock__c/fields/breg_Class_Series__c.field-meta.xml
<CustomField>
    <fullName>breg_Class_Series__c</fullName>
    <label>Class/Series</label>
    <length>255</length>
    <type>Text</type>
</CustomField>