force-app/main/default/objects/breg_Stock__c/fields/breg_Number_of_Issued_Shares__c.field-meta.xml
<CustomField>
    <fullName>breg_Number_of_Issued_Shares__c</fullName>
    <label># of Shares</label>
    <length>20</length>
    <type>Text</type>
</CustomField>