force-app/main/default/objects/breg_Stock__c/fields/breg_Number_of_Shares__c.field-meta.xml
<CustomField>
    <fullName>breg_Number_of_Shares__c</fullName>
    <description>Aalta BREG-64</description>
    <label># of Shares (Deprecated)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>