force-app/main/default/objects/breg_Stock__c/fields/breg_Paid_Shares__c.field-meta.xml
<CustomField>
    <fullName>breg_Paid_Shares__c</fullName>
    <description>Aalta BREG-64</description>
    <label>Paid Shares</label>
    <length>20</length>
    <type>Text</type>
</CustomField>