force-app/main/default/objects/breg_Stock__c/fields/breg_Per_Value__c.field-meta.xml
<CustomField>
    <fullName>breg_Per_Value__c</fullName>
    <description>Aalta BREG-64</description>
    <label>Par Value</label>
    <length>20</length>
    <type>Text</type>
</CustomField>