force-app/main/default/objects/breg_Stock__c/fields/breg_Remarks__c.field-meta.xml
<CustomField>
    <fullName>breg_Remarks__c</fullName>
    <description>Aalta BREG-1355</description>
    <label>Remarks</label>
    <type>TextArea</type>
</CustomField>