force-app/main/default/objects/breg_Stock__c/fields/breg_Shareholder_Address__c.field-meta.xml
<CustomField>
    <fullName>breg_Shareholder_Address__c</fullName>
    <label>Shareholder Address</label>
    <type>Address</type>
</CustomField>