force-app/main/default/objects/breg_Stock__c/fields/breg_Shareholder_Name__c.field-meta.xml
<CustomField>
    <fullName>breg_Shareholder_Name__c</fullName>
    <label>Shareholder Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>