force-app/main/default/objects/breg_Stock__c/fields/breg_Stock_Amount__c.field-meta.xml
<CustomField>
    <fullName>breg_Stock_Amount__c</fullName>
    <description>Aalta BREG-64</description>
    <label>Stock Amount</label>
    <length>20</length>
    <type>Text</type>
</CustomField>