force-app/main/default/objects/breg_Stock__c/fields/breg_Stock_Class__c.field-meta.xml
<CustomField>
    <fullName>breg_Stock_Class__c</fullName>
    <description>Aalta BREG-1355</description>
    <label>Stock Class</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Common</fullName>
            </value>
            <value>
                <fullName>Preferred</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>