force-app/main/default/objects/breg_Stock__c/fields/breg_Stock_Limit_2__c.field-meta.xml
<CustomField>
    <fullName>breg_Stock_Limit_2__c</fullName>
    <description>Aalta BREG-64</description>
    <label>Stock Limit 2 (Deprecated)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>