force-app/main/default/objects/breg_Stock__c/fields/breg_Stock_Limit_Date__c.field-meta.xml
<CustomField>
    <fullName>breg_Stock_Limit_Date__c</fullName>
    <description>Aalta BREG-64</description>
    <label>Stock Limit Date (Deprecated)</label>
    <type>Date</type>
</CustomField>